--- a/programs/metajungle-solana/Cargo.toml
+++ b/programs/metajungle-solana/Cargo.toml
@@ -15,4 +15,6 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.17.0"
+anchor-lang = "0.20.1"
+anchor-spl = {version = "0.20.1"}
+spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
